fix non wrapping images

--- a/css/site.scss
+++ b/css/site.scss
@@ -23,7 +23,11 @@ $trans-white:rgba(255,255,255,0.9);
   -o-transform: $transformation;
   transform:$transformation;
 }
+html {
+  height: 100%;
+}
 body {
+  height: 100%;
   padding: 0;
   margin: 0;
   border: 0;
@@ -36,6 +40,7 @@ body {
 }
 section#portfolio {
   display: flex;
+  flex-wrap: wrap;
 }
 a {
   color: $text-color;
@@ -45,11 +50,6 @@ a {
   &:hover {
     color: $key-color;
   }
-}
-hr {
-  margin: 0;
-  border-top: white 1px solid;
-  border-bottom: black 1px solid;
 }
 h1 {
   text-transform: uppercase;
@@ -216,7 +216,7 @@ nav ul.open-menu{
 /*main content */
 section {
 	position: relative;
-  top:120px;
+  margin-top:120px;
   img {
     width: 100%;
   }
@@ -266,14 +266,13 @@ section {
 /* portfolio */
 #portfolio, #blog {
   text-align: center;
+  justify-content: space-between;
   .project{
-    max-width: 100%;
     flex-grow: 0;
     flex-shrink: 1;
     flex-basis: 300px;
     position: relative;
-    margin: 40px;
-    display: inline-block;
+    margin: 20px;
     height: 300px;
     overflow: hidden;
     background-color: $key-color;
